--- a/01.Client/myapp-client/package.json
+++ b/01.Client/myapp-client/package.json
@@ -22,6 +22,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.4.1",
     "tailwindcss": "^4.1.17",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3",
     "zod": "^4.1.13"
